--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -29,7 +29,7 @@
                 <li><span class="navbar-brand" href="#">NAVIGATION STUFF</span></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" >
-                <li><span class="navbar-brand" href="#">USER TYPE</span></li>
+                <li><span class="navbar-brand" href="#">UserName:<%=type%></span></li>
             </ul>
         </div>
       </div>
