--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,16 +14,16 @@
     
 <body>
        <div class="modal-body" style="padding:40px 50px;">
-          <form action = 'home-page' method="post" role="form">
+          <form action = 'home-page' method="post">
             <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
-              <input type="text" class="form-control" id="usrname" name = 'username' placeholder="Enter Username">
+              <label for="type"><span class="glyphicon glyphicon-user"></span> Username</label>
+              <input type="text" class="form-control" name = 'type' placeholder="Enter Username" />
             </div>
             <div class="form-group">
               <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
-              <input type="password" class="form-control" id="psw" name = 'password' placeholder="Enter password">
+              <input type="password" class="form-control" name = 'password' placeholder="Enter password" />
             </div>
-              <input type="submit" class="btn btn-success btn-block" name= 'login' value = 'login' style="background-color: skyblue">
+              <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
           </form>
         </div>  
 </body>
