can add companies to database

--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -42,6 +42,12 @@
               <div class="main-header ">
                 <div><h2>TEST</h2></div>
                 <h1 style="font-size: 70px;">HOME PAGE STUFF</h1>
+<!--                  test-->
+                 <form action = 'companyView' method="post">
+                    <input type="text" class="form-control" name = 'company' placeholder="Enter Company" />
+                    <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
+                 </form>
+                  
               </div>
         </div>
     </div>
