--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -30,6 +30,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right" >
                 <li><span class="navbar-brand" href="#">UserName:<%=type%></span></li>
+                <li><a class="btn btn-default btn-lg" href = '/logout' >Logout</a></li>
             </ul>
         </div>
       </div>
