--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <style>   
-    </style>   
+    </style> 
+    
+    <script>
+      $(document).ready(function(){
+        $("#company-button").click(function(){
+            $("#company-modal").modal();
+        });
+      });
+    </script>
 </head>
     
 <body>
@@ -34,7 +42,32 @@
             </ul>
         </div>
       </div>
-    </nav>    
+    </nav> 
+    
+    <!-- Modal -->
+    <div class="modal fade" id="company-modal" role="dialog">
+        <div class="modal-dialog">
+        
+        <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header" style="padding:35px 50px; color: black; font-weight: bold;">
+                <button type="button" class="close" data-dismiss="modal" style="size: 30px;">&times;</button>
+                <span> Enter Company Details </span>
+            </div>
+            <div class="modal-body" style="padding:40px 50px;">
+                <form action = 'companyView' method="post">
+                    <input type="text" class="form-control" name = 'company' placeholder="Enter Company Name" />
+                    <input type="text" class="form-control" name = 'address' placeholder="Enter Company Address" />
+                    <input type="text" class="form-control" name = 'person' placeholder="Enter Contact Person's Name" />
+                    <input type="text" class="form-control" name = 'position' placeholder="Enter Contact Person's Position" />
+                    <input type="text" class="form-control" name = 'rank' placeholder="Enter Contact Person's Rank" />
+                    <input type="text" class="form-control" name = 'details' placeholder="Enter Contact Person's Details" />
+                    <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
+                 </form>
+            </div>
+          </div>
+        </div>
+      </div>
     
     <div class="container-fluid text-center">    
         <div class="row content">
@@ -43,13 +76,15 @@
               <div class="main-header ">
                 <div><h2>TEST</h2></div>
                 <h1 style="font-size: 70px;">HOME PAGE STUFF</h1>
-<!--                  test-->
-                 <form action = 'companyView' method="post">
-                    <input type="text" class="form-control" name = 'company' placeholder="Enter Company" />
-                    <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
-                 </form>
-                  
+                    <button type="button" class="btn btn-default btn-lg" id="company-button">NEW COMPANY</button>
               </div>
+            
+              <div class="companies">
+                    <% for(var i=0;i<data.list.length;i++){ %>
+                        <h3>Company: <%= data.list[i].companyName %></h3><br />
+                    <% } %>
+              </div>
+            
         </div>
     </div>
 
