company and details can now be added through modal

--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>   
     </style> 
     
@@ -56,13 +57,12 @@
             </div>
             <div class="modal-body" style="padding:40px 50px;">
                 <form action = 'companyView' method="post">
-                    <input type="text" class="form-control" name = 'company' placeholder="Enter Company Name" />
-                    <input type="text" class="form-control" name = 'address' placeholder="Enter Company Address" />
-                    <input type="text" class="form-control" name = 'person' placeholder="Enter Contact Person's Name" />
-                    <input type="text" class="form-control" name = 'position' placeholder="Enter Contact Person's Position" />
-                    <input type="text" class="form-control" name = 'rank' placeholder="Enter Contact Person's Rank" />
-                    <input type="text" class="form-control" name = 'details' placeholder="Enter Contact Person's Details" />
-                    <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
+                    <input type="text" class="form-control" name = 'company' placeholder="Enter Company Name" /> <br />
+                    <input type="text" class="form-control" name = 'address' placeholder="Enter Company Address" /> <br />
+                    <input type="text" class="form-control" name = 'person' placeholder="Enter Contact Person's Name" /> <br />
+                    <input type="text" class="form-control" name = 'position' placeholder="Enter Contact Person's Position" /> <br />
+                    <input type="text" class="form-control" name = 'details' placeholder="Enter Contact Person's Details" /> <br />
+                    <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" /> <br />
                  </form>
             </div>
           </div>
