added tax identification number

--- a/views/pages/home-page.ejs
+++ b/views/pages/home-page.ejs
@@ -62,6 +62,7 @@
                     <input type="text" class="form-control" name = 'person' placeholder="Enter Contact Person's Name" /> <br />
                     <input type="text" class="form-control" name = 'position' placeholder="Enter Contact Person's Position" /> <br />
                     <input type="text" class="form-control" name = 'details' placeholder="Enter Contact Person's Details" /> <br />
+                    <input type="text" class="form-control" name = 'taxNumber' placeholder="Enter Company Tax Identification Number" /> <br />
                     <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" /> <br />
                  </form>
             </div>
