--- a/views/pages/companyView.ejs
+++ b/views/pages/companyView.ejs
@@ -21,6 +21,7 @@
                 <h1 style="font-size: 70px;">Company:<%=company%></h1>       
               </div>
         </div>
+<!--        <a href="/masterList/" type = "button" class = "btn btn-warning btn-xs btn-block" style="background-color: blue;" >Company Master List</a>  -->
     </div>
 
 </body>
