made new page to handle routing

--- a/views/pages/companyView.ejs
+++ b/views/pages/companyView.ejs
@@ -21,6 +21,7 @@
               <div class="main-header ">
                 <h1 style="font-size: 70px;">Company:<%=company%></h1>       
               </div>
+         <a href="/home-redirect" class="glyphicon glyphicon-home">HOME </a>
         </div>
 <!--        <a href="/masterList/" type = "button" class = "btn btn-warning btn-xs btn-block" style="background-color: blue;" >Company Master List</a>  -->
     </div>
