masterlist modal more efficient

--- a/views/pages/companyView.ejs
+++ b/views/pages/companyView.ejs
@@ -46,7 +46,7 @@
                     <input type="text" class="form-control" name = 'firstName' placeholder="Enter Employee's First Name" /> <br />
                     <input type="text" class="form-control" name = 'position' placeholder="Enter Employee's Position" /> <br />
                     <input type="text" class="form-control" name = 'gender' placeholder="Enter Employee's Gender" /> <br />
-                    <input type="text" class="form-control" id = "company" name= 'company' value="<%=company%>"> <br />
+                    <input type="hidden" class="form-control" id = "company" name= 'company' value="<%=company%>"> <br />
                     <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" /> <br />
                  </form>
             </div>
