Fixed index grid layout

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,11 @@
 </head>
     
 <body>
-       <div class="modal-body" style="padding:40px 50px;">
+    <div class="col-sm-4 sidenav">
+    </div>
+    
+    <div class="col-sm-4 sidenav">
+        <div class="modal-body" style="padding:40px 50px;">
           <form action = 'home-page' method="post">
             <div class="form-group">
               <label for="type"><span class="glyphicon glyphicon-user"></span> Username</label>
@@ -26,6 +30,10 @@
               <input type="submit" class="btn btn-success btn-block" value = 'Submit' style="background-color: skyblue" />
           </form>
         </div>  
+    </div>
+    
+    <div class="col-sm-4 sidenav">
+    </div>
 </body>
 </html>
 
